--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
     "gh-pages": "^2.0.1",
     "typescript": "^3.3.1"
   },
-  "homepage": "https://subyraman.github.io/redux-webauthn/"
+  "homepage": "https://subyraman.github.io/redux-webauthn-client-example/"
 }
